# asice-rs

./: Cargo.toml  README.md
src/: container.rs  lib.rs  manifest.rs
tests/: interop.rs
tests/fixtures/: signatures0.xml  xades-lt.asice
