[package]
name = "asic-e"
version = "0.1.0"
edition = "2024"
description = "Build and parse ASiC-E containers"
license = "Apache-2.0"
homepage = "https://github.com/takakv/rust-asice"
repository = "https://github.com/takakv/rust-asice"
keywords = ["asice", "eidas", "bdoc", "digidoc"]

[dependencies]
thiserror = "2.0.18"
uppsala = "0.9.0"
zip = "8.6.0"
